<resources>
    <string name="app_name">NFC Writer Pal</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_app_selection">App Selection</string>
    <string name="title_activity_read">Read Tag</string>
    <string name="title_activity_record_selection">Record Selection</string>
    <string name="title_activity_write">Write To Tag</string>
    <string name="title_activity_hms">HMSActivity</string>
    <string name="title_activity_format">Format</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_share">Share</string>

    <string name="write">Write</string>
    <string name="read">Read</string>
    <string name="format">Format</string>
    <string name="saved_functions">Saved functions</string>
    <string name="share">Share</string>
    <string name="contact">Contact</string>
    <string name="communicate">Communicate</string>
    <string name="payload">Payload</string>

    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="save">Save</string>
    <string name="save_and_write">Save &amp; Write</string>
    <string name="http">HTTP</string>
    <string name="https">HTTPS</string>
    <string name="bytes">Bytes</string>
    <string name="record_type">Type:</string>
    <string name="record_size">Size:</string>
    <string name="scan_tag">Scan Tag</string>

    <string name="read_tag_id">Tag ID:</string>
    <string name="read_tag_max_size">Tag maximum memory:</string>
    <string name="read_tag_current_size">Tag current size:</string>
    <string name="read_no_of_messages">Number of NDEF messages:</string>
    <string name="read_no_of_records">Number of NDEF records:</string>
    <string name="read_tag_type">Tag Type:</string>
    <string name="read_tech_list_title">List of supported tech:</string>
    <string name="read_record_list_title">Records on NFC Tag:</string>
    <string name="read_tag_unknown">Tag Type Unknown</string>
    <string name="read_writable">Writable</string>

    <string name="dialog_webpage_address">Webpage Address</string>
    <string name="dialog_webpage_enter_address">Enter Webpage Address</string>
    <string name="dialog_phonecall_enter_no">Enter Phone Number</string>
    <string name="dialog_sms_enter_no">Enter Phone Number</string>
    <string name="dialog_sms_enter_body">Enter Text Body</string>
    <string name="dialog_email_enter_address">Enter Email Address</string>
    <string name="dialog_email_enter_subject">Enter Email Subject</string>
    <string name="dialog_email_enter_body">Enter Email Body</string>
    <string name="dialog_location_longitude">Longitude</string>
    <string name="dialog_location_latitude">Latitude</string>
    <string name="dialog_location_use_current">Use Current Location</string>
    <string name="dialog_http_type">HTTP Type</string>
    <string name="dialog_hms_ip">Enter HMS IP Address</string>
    <string name="dialog_hms_script_location">Enter script location (e.g /functions/security)</string>
    <string name="dialog_hms_script_name">Enter Script Name</string>
    <string name="dialog_tap_title">Tap Device Off NFC Tag</string>
    <string name="dialog_tap_text">Please touch your phone off an NFC tag</string>
    <string name="dialog_unformattable_title">Tag Not Formattable</string>
    <string name="dialog_unformattable_message">Would you like to wipe all data on the tag instead?</string>

    <string name="error_web_required">Webpage Address Required</string>
    <string name="error_phone_required">Phone Number Required</string>
    <string name="error_body_required">Body Required</string>
    <string name="error_subject_required">Subject Required</string>
    <string name="error_email_required">Email Address Required</string>
    <string name="error_latitude">Latitude Required</string>
    <string name="error_longitude">Longitude Required</string>
    <string name="error_ip">IP Address Required</string>
    <string name="error_script">Script Name Required</string>
    <string name="error_loading_icon">Error in getting icon</string>

    <string name="ms_webpage">Webpage</string>
    <string name="ms_email">Email</string>
    <string name="ms_phone">Phone Number</string>
    <string name="ms_sms">SMS</string>
    <string name="ms_app">App</string>
    <string name="ms_location">Location</string>
    <string name="ms_hms">Home Management System</string>

    <string name="write_tag_size">Tag Size: </string>
    <string name="write_msg_size">Message Size: </string>
    <string name="write_not_writable">Not Writable</string>
    <string name="write_too_small">Tag size is too small.</string>
    <string name="write_available">Available:</string>
    <string name="write_need">Need:</string>
    <string name="write_add_record">Add a record to write</string>
    <string name="write_remove">Remove All</string>
    <string name="write_header_request_type">Request Type:</string>
    <string name="write_header_webpage">Webpage:</string>
    <string name="write_header_phone_number">Number:</string>
    <string name="write_header_body">Body:</string>
    <string name="write_header_email_address">Address:</string>
    <string name="write_header_email_subject">Subject:</string>
    <string name="write_header_app_name">App:</string>
    <string name="write_dialog_no_records">No records to write to tag</string>

    <string name="format_tag_formatted">Tag Formatted as NDEF</string>
    <string name="format_not_writable">Tag is not Writable</string>
    <string name="format_tag_wiped">Tag Wiped</string>


    <string name="share_title">Think this app is fantastic?</string>
    <string name="share_subtitle">Why not share it with your friends?</string>

    <string name="contact_bug_title">Find a bug?</string>
    <string name="contact_bug_body">If you have found a bug, please give a detailed as possible report. This includes:
                                    \n\u2022 Events leading up to bug.
                                    \n\u2022 What you were doing when the bug occurred.
                                    \n\u2022 What happened after the bug occurred.</string>
    <string name="contact_bug_button">Submit Bug Report</string>

    <string name="contact_query_title">Have a Query?</string>
    <string name="contact_query_body">Have any questions or queries about this app?
                                    Feel free to get in contact and I will do my best to answer.</string>
    <string name="contact_query_button">Submit Query</string>

    <string name="contact_suggestion_title">Suggestion</string>
    <string name="contact_suggestion_body">Have any suggestions on how to improve this app?
                                            Submit a suggestion now and try help this app reach its full potential</string>
    <string name="contact_suggestion_button">Submit Suggestion</string>
</resources>
