<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.seanc.nfcwriterpal.ActivityHandlers.ContactActivity"
    tools:showIn="@layout/app_bar_contact">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/contact_bug_title"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/contact_tv_bug_title"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_column="0"
            android:fontFamily="serif-monospace"
            android:layout_row="0"
            android:layout_width="270dp" />

        <TextView
            android:text="@string/contact_bug_body"
            android:layout_height="wrap_content"
            android:id="@+id/contact_tv_bug_body"
            android:layout_column="0"
            android:layout_row="1"
            android:layout_width="270dp" />

        <ImageView
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_bug_icon"
            android:id="@+id/contact_img_bug"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="60dp"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical" />

        <Button
            android:text="@string/contact_bug_button"
            android:layout_height="wrap_content"
            android:id="@+id/contact_btn_bug"
            android:layout_column="0"
            android:layout_row="2"
            android:layout_gravity="center_horizontal"
            android:layout_width="170dp"
            android:background="@drawable/btn_white" />

        <TextView
            android:text="@string/contact_query_title"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contact_tv_bug_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/contact_tv_query_title"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:fontFamily="serif-monospace"
            android:layout_width="270dp" />

        <TextView
            android:text="@string/contact_query_body"
            android:layout_height="wrap_content"
            android:id="@+id/contact_tv_query_body"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_width="270dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_query_icon"
            android:id="@+id/contact_img_query"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical" />

        <Button
            android:text="@string/contact_query_button"
            android:layout_height="wrap_content"
            android:id="@+id/contact_btn_query"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_width="170dp"
            android:background="@drawable/btn_white" />

        <TextView
            android:text="@string/contact_suggestion_title"
            android:layout_height="wrap_content"
            android:id="@+id/contact_tv_suggestion_title"
            android:layout_row="6"
            android:layout_column="0"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:fontFamily="serif-monospace"
            android:layout_width="270dp" />

        <TextView
            android:text="@string/contact_suggestion_body"
            android:layout_height="wrap_content"
            android:id="@+id/contact_tv_suggestion_body"
            android:layout_row="7"
            android:layout_column="0"
            android:layout_width="270dp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_suggestion_icon"
            android:id="@+id/contact_img_suggestion"
            android:layout_row="6"
            android:layout_column="1"
            android:layout_rowSpan="2"
            android:layout_gravity="center_vertical" />

        <Button
            android:text="@string/contact_suggestion_button"
            android:layout_height="wrap_content"
            android:id="@+id/contact_btn_suggestion"
            android:layout_column="0"
            android:layout_row="8"
            android:layout_gravity="center_horizontal"
            android:layout_width="170dp"
            android:background="@drawable/btn_white" />
    </GridLayout>

</RelativeLayout>
