<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.seanc.nfcwriterpal.ActivityHandlers.ShareActivity"
    tools:showIn="@layout/app_bar_share">

    <TextView
        android:text="@string/share_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/share_tv_subtitle"
        android:textSize="16sp"
        android:fontFamily="casual"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_below="@+id/share_tv_title"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:id="@+id/share_tv_title"
        android:textIsSelectable="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="20sp"
        android:fontFamily="casual"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/share"
        android:layout_height="70dp"
        android:layout_marginTop="45dp"
        android:id="@+id/share_btn_share"
        android:background="@drawable/btn_msg_selection"
        android:layout_below="@+id/share_tv_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:textSize="18sp" />

</RelativeLayout>
