<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_read"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.seanc.nfcwriterpal.ActivityHandlers.ReadActivity"
    tools:showIn="@layout/app_bar_read">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/read_tag_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/idTitle"
                android:layout_row="0"
                android:layout_column="0"
                android:textStyle="normal|bold" />

            <Space
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_width="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tagID"
                android:layout_row="0"
                android:layout_column="2" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_column="0"
                android:layout_row="1" />

            <TextView
                android:text="@string/read_tag_max_size"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_maxSizeTitle"
                android:layout_column="0"
                android:layout_row="2"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_maxSize"
                android:layout_column="2"
                android:layout_row="2" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_row="3"
                android:layout_column="0" />

            <TextView
                android:text="@string/read_tag_current_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_currentSizeTitle"
                android:layout_column="0"
                android:layout_row="4"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_currentSize"
                android:layout_row="4"
                android:layout_column="2" />

            <TextView
                android:text="@string/read_writable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_writable_header"
                android:layout_column="0"
                android:layout_row="5"
                android:layout_marginTop="20dp"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_writable"
                android:layout_column="2"
                android:layout_row="5"
                android:layout_marginTop="20dp"
                android:text=" " />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_row="6"
                android:layout_column="0" />

            <TextView
                android:text="@string/read_no_of_messages"
                android:layout_height="wrap_content"
                android:id="@+id/ndefMsgsTitle"
                android:layout_row="7"
                android:layout_column="0"
                android:textStyle="normal|bold"
                android:layout_width="105dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tagMessages"
                android:layout_row="7"
                android:layout_column="2"
                android:layout_marginTop="5dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_row="8"
                android:layout_column="0" />

            <TextView
                android:text="@string/read_no_of_records"
                android:layout_height="wrap_content"
                android:id="@+id/ndefRcrdsTitle"
                android:layout_row="9"
                android:layout_column="0"
                android:textStyle="normal|bold"
                android:layout_width="105dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tagRecords"
                android:layout_row="9"
                android:layout_column="2"
                android:layout_marginTop="5dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_column="0"
                android:layout_row="10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_type_title"
                android:layout_row="11"
                android:layout_column="0"
                android:text="@string/read_tag_type"
                android:textStyle="normal|bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_type"
                android:layout_row="11"
                android:layout_column="2" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_row="12"
                android:layout_column="0" />

            <TextView
                android:text="@string/read_tech_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/techTitle"
                android:layout_column="0"
                android:layout_row="13"
                android:textStyle="normal|bold"
                android:layout_columnSpan="3" />

            <com.apps.seanc.nfcwriterpal.CutomViews.NonScrollListView
                android:id="@+id/tech_nonscroll_list"
                android:layout_width="200dp"
                android:layout_height="wrap_content"

                android:layout_row="14"
                android:layout_column="0"
                android:layout_columnSpan="3">
            </com.apps.seanc.nfcwriterpal.CutomViews.NonScrollListView>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_row="15"
                android:layout_column="0" />

            <TextView
                android:text="@string/read_record_list_title"
                android:layout_height="wrap_content"
                android:id="@+id/read_tv_records"
                android:layout_row="16"
                android:layout_column="0"
                android:layout_width="wrap_content"
                android:textStyle="normal|bold"
                android:layout_columnSpan="3" />

            <com.apps.seanc.nfcwriterpal.CutomViews.NonScrollListView
                android:id="@+id/record_nonscroll_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_row="17"
                android:layout_column="0"
                android:layout_columnSpan="4">
            </com.apps.seanc.nfcwriterpal.CutomViews.NonScrollListView>

        </GridLayout>
    </ScrollView>
</RelativeLayout>
