<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main_with_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.apps.seanc.nfcwriterpal.ActivityHandlers.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:text="@string/read"
        android:id="@+id/readButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:drawableLeft="@drawable/ic_menu_read"
        android:background="@drawable/btn_blue"
        android:layout_height="120dp"
        android:layout_width="160dp" />

    <Button
        android:text="@string/write"
        android:id="@+id/writeButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_menu_write"
        android:background="@drawable/btn_orange"
        android:layout_height="120dp"
        android:layout_width="160dp" />

    <Button
        android:text="Share"
        android:layout_marginTop="10dp"
        android:id="@+id/main_btn_share"
        android:layout_below="@+id/main_btn_format"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:drawableLeft="@drawable/ic_menu_share"
        android:background="@drawable/btn_red"
        android:layout_height="120dp"
        android:layout_width="160dp" />

    <Button
        android:text="@string/format"
        android:layout_marginTop="10dp"
        android:id="@+id/main_btn_format"
        android:drawableLeft="@drawable/ic_menu_wipe"
        android:layout_below="@+id/writeButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/btn_green"
        android:layout_height="120dp"
        android:layout_width="160dp" />

</RelativeLayout>
