<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:id="@+id/email_dialog_layout">

    <TextView
        android:text="@string/dialog_email_enter_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/de_tv_email_header"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/de_et_email_address"
        android:hint="@string/dialog_email_enter_address"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/dialog_email_enter_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/de_tv_subject_header"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/de_et_subject"
        android:hint="@string/dialog_email_enter_subject"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:inputType="textEmailSubject" />

    <TextView
        android:text="@string/dialog_email_enter_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/de_tv_body_header"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/de_et_body"
        android:hint="@string/dialog_email_enter_body"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine" />

</LinearLayout>